RESOLVED FIXED205439
Web Inspector: TypeError: InjectedScriptHost.isPromiseRejectedWithNativeGetterTypeError first argument must be a Promise
https://bugs.webkit.org/show_bug.cgi?id=205439
Summary Web Inspector: TypeError: InjectedScriptHost.isPromiseRejectedWithNativeGette...
Devin Rousso
Reported 2019-12-18 23:07:15 PST
# STEPS TO REPRODUCE: 1. turn on Web Animations 2. inspect any page 3. evaluate `document.body.animate([])` 4. expand the result `Animation` => both `finished` and `ready` show "TypeError: InjectedScriptHost.isPromiseRejectedWithNativeGetterTypeError first argument must be a Promise" instead of a `Promise`
Attachments
Patch (2.08 KB, patch)
2019-12-19 00:08 PST, Devin Rousso
no flags
Patch (2.76 KB, patch)
2019-12-19 15:09 PST, Devin Rousso
no flags
Devin Rousso
Comment 1 2019-12-19 00:08:05 PST
Blaze Burg
Comment 2 2019-12-19 09:35:54 PST
Comment on attachment 386078 [details] Patch r=me, please add more infos to changelog per our conversation.
Devin Rousso
Comment 3 2019-12-19 15:09:49 PST
WebKit Commit Bot
Comment 4 2019-12-19 16:47:06 PST
Comment on attachment 386152 [details] Patch Clearing flags on attachment: 386152 Committed r253801: <https://trac.webkit.org/changeset/253801>
WebKit Commit Bot
Comment 5 2019-12-19 16:47:08 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2019-12-19 16:48:20 PST
Joseph Pecoraro
Comment 7 2019-12-20 11:33:58 PST
Nice!
Note You need to log in before you can comment on or make changes to this bug.